[jspit/colorboop] eject all javascript code from html (HEAD -> josh-dev) - Joshua T Corbin <jcorbin@wunjo.org> 58 minutes ago

--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -57,88 +57,7 @@
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float"></div>
 
-    <script type="module">
-      function reset(grid) {
-        const colors = [
-          'black',
-          'darker-grey',
-          'dark-grey',
-          'grey',
-          'light-grey',
-          'lighter-grey',
-          'white',
-          'dark-white',
-          'blue',
-          'bright-purple',
-          'cyan',
-          'dark-orange',
-          'dark-sea-green',
-          'green',
-          'light-cyan',
-          'magenta',
-          'orange',
-          'purple',
-          'red',
-          'red-orange',
-          'yellow',
-          'yellow-orange',
-        ];
-
-        grid.clear();
-
-        const pos = {x: 10, y: 10};
-        grid.createTile({
-          plane: 'solid',
-          pos,
-          kind: 'mover',
-          classList: ['input', 'support'],
-          text: '@',
-        });
-        grid.viewPoint = pos;
-
-        colors.forEach((color, i) => {
-          grid.createTile({
-            plane: 'solid',
-            pos: {x: 5, y: i},
-            kind: 'swatch',
-            classList: 'interact',
-            text: '$',
-            style: {color: `var(--${color})`},
-            data: {
-              name: `fg:${color}`,
-              morph_subject: {
-                style: {color: `var(--${color})`},
-              },
-            },
-          });
-          grid.createTile({
-            plane: 'solid',
-            pos: {x: 15, y: i},
-            kind: 'swatch',
-            classList: 'interact',
-            text: '$',
-            style: {backgroundColor: `var(--${color})`},
-            data: {
-              name: `bg:${color}`,
-              morph_subject: {
-                style: {backgroundColor: `var(--${color})`},
-              },
-            },
-          });
-        });
-      }
-
-      import {DOMgeon, DOMgeonInspector} from 'cdom/domgeon';
-      const dmg = window.dmg = new DOMgeon({
-        ui: document.body,
-        grid: document.querySelector('.grid'),
-        moveBar: document.querySelector('.buttonbar.moves'),
-        actionBar: document.querySelector('.buttonbar.actions'),
-      });
-      new DOMgeonInspector(dmg, document.querySelector('#inspector'));
-      dmg.onKey.byCode['Backspace'] = () => reset(dmg.grid);
-      reset(dmg.grid);
-    </script>
+    <script type="module" src="./colorboop.js"></script>
   </body>
 
 </html>
