--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -25,22 +25,13 @@
 
       <section>
         <h1>Cascading DOMgeon Template</h1>
-        <h3><a href="index.html">Back to Welcome screen</a></h3>
 
         <p>
           Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
         </p>
-        <details>
-          <summary>TODO</summary>
-          <ul>
-            <li>the void should be an other plane...</li>
-            <li>things to find and do there</li>
-            <li>...how to return back to the solid plane?</li>
-            <li>maybe inventory and items</li>
-          </ul>
-        </details>
       </section>
 
+      <!-- TODO may comment out or remove this, as it's mostly a development aid -->
       <fieldset id="inspector">
         <legend>
           <label for="inspector-ids">Tiles @<span data-for="pos">X,Y</span>:</label>
@@ -50,150 +41,10 @@
 
     </aside>
 
-    <style>
-      /* tile stacking priorities */
-      .tile.floor { z-index:  1 }
-      .tile       { z-index:  5 }
-      .tile.wall  { z-index: 10 }
-      .tile.mover { z-index: 20 }
-      .tile.input { z-index: 50 }
-
-      .grid {
-        --grid-bg: hsl(0, 0, 0);
-      }
-
-      .plane.meme .tile[data-light] {
-        opacity: var(--light, 15%);
-      }
-
-      .plane.meme .tile:not([data-light]) {
-        opacity: 15%;
-      }
-
-      .tile.floor {
-        background-color: hsl(70, 5%, 12%);
-        color: hsl(70, 5%, 27%);
-      }
-
-      .tile.wall {
-        background-color: hsl(50, 15%, 15%);
-        color: hsl(50, 25%, 30%);
-      }
-
-      .tile.mover {
-        color: hsl(20, 75%, 50%);
-      }
-      .tile.mover.input,
-      .tile.mover.inputable {
-        color: hsl(220, 75%, 50%);
-      }
-      .tile.mover.input.focus,
-      .tile.mover.inputable.focused {
-        color: hsl(120, 75%, 50%);
-      }
-
-      .tile.mover {
-        --lightInit: 1;
-      }
-      .tile.mover.input {
-        --lightInit: 2;
-      }
-      .tile.mover.input.focus {
-        --lightInit: 8;
-      }
-
-      .tile.door {
-        background-color: hsl(50, 25%, 15%);
-        color: hsl(50, 90%, 30%);
-        --action: "open";
-        --morph_target: "!passable";
-      }
-      .tile.door::before { content: "+" }
-
-      .tile.door.passable {
-        background-color: hsl(70, 5%, 12%);
-        --action: "close";
-      }
-      .tile.door.passable::before { content: "-" }
-
-      .tile.rune { color: hsl(270, 80%, 65%) }
-
-      .tile.mover.support {
-        text-decoration: underline;
-        text-decoration-style: dotted;
-      }
-
-      .plane { display: none }
-      .plane.meme { display: initial }
-
-      .plane[data-plane="domgeon-inspect"] { display: initial }
-      .plane[data-plane="domgeon-inspect"] { z-index: 1000 }
-
-    </style>
-
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float"></div>
 
-    <script type="module">
-      import {DOMgeon} from 'cdom/domgeon';
-      const dmg = window.dmg = new DOMgeon({
-        ui: document.body,
-        keys: document.body,
-        grid: document.querySelector('.grid'),
-        moveBar: document.querySelector('.buttonbar.moves'),
-        actionBar: document.querySelector('.buttonbar.actions'),
-        lightLimit: 0.2,
-      });
-
-      import {DOMgeonInspector} from 'cdom/domgeon';
-      new DOMgeonInspector(dmg, document.querySelector('#inspector'));
-
-      import * as build from 'cdom/builder';
-      const floorShader = {plane: 'solid', kind: 'floor', classList: ['support', 'passable'], text: '·'};
-      const wallShader = {plane: 'solid', kind: 'wall', text: '#'};
-      const doorShader = {plane: 'solid', kind: 'door', classList: 'interact'};
-
-      dmg.grid.getPlane('solid').classList.add('lit');
-
-      build.fillRect(dmg.grid, {x: 0, y: 0, w: 13, h: 8}, build.roomShader({
-        floors: floorShader,
-        walls: wallShader,
-        doors: doorShader,
-        doorsAt: (pos, rect) => 
-          pos.x === rect.x + Math.floor(rect.w/2),
-      }));
-
-      build.fillRect(dmg.grid, {x: 5, y: -5, w: 3, h: 5}, build.roomShader({
-        floors: floorShader,
-        walls: build.borderShader(null, wallShader),
-      }));
-
-      build.fillRect(dmg.grid, {x: 4, y: -10, w: 5, h: 5}, build.roomShader({
-        floors: floorShader,
-        walls: wallShader,
-        doors: doorShader,
-        doorsAt: (pos, rect) => 
-          pos.x === rect.x + Math.floor(rect.w/2) &&
-          pos.y === rect.y + rect.h-1,
-      }));
-
-      dmg.grid.buildTile({
-        pos: {x: 6, y: -8},
-        plane: 'solid',
-        kind: 'floor',
-        classList: ['rune', 'interact', '-passable'],
-        text: 'V',
-        data: {
-          name: 'void rune',
-          morph_spawn: {plane: 'solid', kind: 'char', classList: ['mover', 'input', 'support', 'focus'], text: '*'},
-          morph_subject: '-focus',
-        },
-      });
-
-      const actor = dmg.grid.createTile({pos: {x: 6, y: 4}, plane: 'solid', kind: 'char', classList: ['mover', 'input', 'focus'], text: '@'});
-      dmg.updateActorView(actor);
-
-    </script>
+    <script type="module" src="./index.js"></script>
   </body>
 
 </html>
