[cdom/domgeon] support initial ui.running to kickoff DOMgeon.start

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Cascading DOMgeon Template</title>
   </head>
+
+  <!-- NOTE if the game should immediately start running without any sort of
+    introductory screen, simply add class="running" to <body> -->
   <body>
 
     <div class="grid">
