--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="bsp.css" />
     <title>jspit: BSP Procgen</title>
   </head>
+
   <body>
 
     <div class="grid">
@@ -17,8 +18,10 @@
     </div>
 
     <aside class="menu">
+
       <button
         class="sticky"
+        id="startStop"
         style="float: right; font-size: 1.5em; line-height: 1"
         data-keycode="Escape"
         title="<Esc>: Start/Stop Game ; Hide/Show Menu">☰</button>
