--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -19,6 +19,7 @@
     <aside class="menu">
       <button
         class="sticky"
+        id="startStop"
         style="float: right; font-size: 1.5em"
         title="Start/Stop Game ; Hide/Show Menu"
         data-legend="Esc"
