--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -20,6 +20,7 @@
     <aside class="menu">
       <button
         class="sticky"
+        id="startStop"
         style="float: right; font-size: 1.5em"
         title="Start/Stop Simulation ; Hide/Show Menu"
         data-legend="Esc"
