--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -66,6 +66,7 @@
     <aside class="menu">
       <button
         class="sticky"
+        id="startStop"
         style="float: right; font-size: 1.5em"
         title="Start/Stop Simulation ; Hide/Show Menu"
         data-legend="Esc"
