[cdom-template] add a note about sticky elements

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -17,6 +17,9 @@
     </div>
 
     <aside class="menu">
+      <!-- NOTE any .sticky elements under aside.menu will still be shown even
+        when running / the menu is hidden -->
+
       <button
         class="sticky"
         style="float: right; font-size: 2em; line-height: 0.75"
