[forest] use domgeon initial running feature

--- a/forest/index.html
+++ b/forest/index.html
@@ -6,30 +6,17 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <title>The Dark Forest</title>
   </head>
-  <body>
+  <body class="running">
 
     <div class="grid">
+      <h3>Find Link! 🔗</h3>
+
       <noscript>
         <section>
           <h3 class="error">DOMgeoneering requires JavaScript</h3>
         </section>
       </noscript>
     </div>
-
-    <aside class="menu">
-      <button
-        class="sticky"
-        style="float: right; font-size: 2em; line-height: 0.75"
-        data-keycode="Escape"
-        title="Start/Stop Game ; Hide/Show Menu">☰</button>
-
-      <section>
-        <h1>The Dark Forest</h1>
-
-        <p>Find Link! 🔗</p>
-      </section>
-
-    </aside>
 
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float"></div>
