[jspit/dla] update to use new domgeon playing state

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -34,6 +34,13 @@
         data-legend="Esc"
         data-keycode="Escape">☰</button>
 
+      <button
+        class="sticky"
+        id="playPause"
+        style="float: right; font-size: 1.5em"
+        data-key="@"
+        title="Toggle playing state">@</button>
+
       <section>
         <h1>Diffusion Limited Aggregation</h1>
         <h3><a href="index.html">Back to Welcome screen</a></h3>
@@ -172,9 +179,7 @@
     <div class="buttonbar moves left" style="display: none">
     </div>
 
-    <div class="buttonbar actions right float">
-      <button data-key="@" title="Drop Player">@</button>
-    </div>
+    <div class="buttonbar actions right float"></div>
 
     <script type="module" src="./dla.js"></script>
   </body>
