[jspit/bsp] add spatial query demo

--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -34,6 +34,13 @@
         title="Toggle playing state">@</button>
 
       <button
+        class="sticky demo"
+        id="spaceQuery"
+        style="float: right; font-size: 1.5em; line-height: 1"
+        data-key="?"
+        title="Spatial Query">?</button>
+
+      <button
         style="float: right; font-size: 1.5em; line-height: 1"
         id="regenWorld"
         data-keycode="Backspace"
