[mine] stepwise mine digger

--- a/mine/index.html
+++ b/mine/index.html
@@ -47,12 +47,27 @@
         data-key="@"
         title="Toggle playing state">@</button>
 
+      <button
+        class="sticky"
+        id="genFinish"
+        style="float: right; font-size: 2em; line-height: 0.75"
+        data-key="N"
+        title="Run DOMgeon generator to completion">⏏️</button>
+
+      <button
+        class="sticky"
+        id="genNext"
+        style="float: right; font-size: 2em; line-height: 0.75"
+        data-key="n"
+        title="Step DOMgeon generator">▶️</button>
+
       <section>
         <h1>Mine Demo</h1>
 
         <p>
           Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
         </p>
+
       </section>
 
 
