[mine] fix parallel halls

--- a/mine/index.html
+++ b/mine/index.html
@@ -47,19 +47,20 @@
         data-key="@"
         title="Toggle playing state">@</button>
 
+      <!--
       <button
         class="sticky"
-        id="genFinish"
+        id="genToEnd"
         style="float: right; font-size: 2em; line-height: 0.75"
         data-key="N"
         title="Run DOMgeon generator to completion">⏏️</button>
-
       <button
         class="sticky"
         id="genNext"
         style="float: right; font-size: 2em; line-height: 0.75"
         data-key="n"
         title="Step DOMgeon generator">▶️</button>
+      -->
 
       <section>
         <h1>Mine Demo</h1>
