[jspit] drop BSP wip remark

--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -64,10 +64,7 @@
             href="http://www.roguebasin.com/index.php?title=Basic_BSP_Dungeon_generation"
             >Rogue Basin BSP article</a>.
           Demonstrates procedural dungeon generation within a random Binary
-          Space Partitioning. This is still very much a WIP, and is roughly
-          only "half done" (rooms, but no doors or hallways):
-        </p>
-
+          Space Partitioning.
         <ul>
           <li>the current scheme runs a BSP over the viewport bounds</li>
           <li>with a random chance (that increases with BSP tree depth) to
