[cube] rotate to preserve orientation

--- a/cube/index.html
+++ b/cube/index.html
@@ -11,17 +11,17 @@
       <section>
         <h1>Cube example</h1>
         <p>
-          Press H, J, K, L to effect successive rotations.
+          Press arrow keys or HJKL to move.
         </p>
       </section>
     </aside>
     <section id="cube" tabindex="0">
-      <div class="face front">1</div>
-      <div class="face back">2</div>
-      <div class="face right">3</div>
-      <div class="face left">4</div>
-      <div class="face top">5</div>
-      <div class="face bottom">6</div>
+      <div class="face front">🚀</div>
+      <div class="face back">🌳</div>
+      <div class="face right">🌋</div>
+      <div class="face left">🍄</div>
+      <div class="face top">⛄️</div>
+      <div class="face bottom">🐧</div>
     </section>
     <script type="module" src="./index.js"></script>
   </body>
