[cube] Parameterize cube dimensions

--- a/cube/index.html
+++ b/cube/index.html
@@ -16,12 +16,12 @@
       </section>
     </aside>
     <section id="cube" tabindex="0">
-      <div class="face front">🚀</div>
-      <div class="face back">🌳</div>
-      <div class="face right">🌋</div>
-      <div class="face left">🍄</div>
-      <div class="face top">⛄️</div>
-      <div class="face bottom">🐧</div>
+      <!-- <div class="face front">🚀</div> -->
+      <!-- <div class="face back">🌳</div> -->
+      <!-- <div class="face right">🌋</div> -->
+      <!-- <div class="face left">🍄</div> -->
+      <!-- <div class="face top">⛄️</div> -->
+      <!-- <div class="face bottom">🐧</div> -->
     </section>
     <script type="module" src="./index.js"></script>
   </body>
