--- a/cube/index.html
+++ b/cube/index.html
@@ -15,13 +15,8 @@
         </p>
       </section>
     </aside>
-    <section id="cube" tabindex="0">
-      <!-- <div class="face front">🚀</div> -->
-      <!-- <div class="face back">🌳</div> -->
-      <!-- <div class="face right">🌋</div> -->
-      <!-- <div class="face left">🍄</div> -->
-      <!-- <div class="face top">⛄️</div> -->
-      <!-- <div class="face bottom">🐧</div> -->
+    <section id="container">
+      <section id="context" tabindex="0"></section>
     </section>
     <script type="module" src="./index.js"></script>
   </body>
