[cube] create facet layer aligned with tiles

--- a/cube/index.html
+++ b/cube/index.html
@@ -7,17 +7,10 @@
     <title>Cube</title>
   </head>
   <body>
-    <aside class="menu">
-      <section>
-        <h1>Cube example</h1>
-        <p>
-          Press arrow keys or HJKL to move.
-        </p>
-      </section>
-    </aside>
     <section id="container">
-      <section id="context" tabindex="0"></section>
+      <section id="context"></section>
     </section>
+    <section id="retical"></section>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
