--- a/tarot/index.html
+++ b/tarot/index.html
@@ -21,7 +21,7 @@
 </body></html>
 <!--
 
-# 2021-04-04
+# 2021-04-05
 
 ## TODO
 
@@ -35,6 +35,8 @@
 - dnd wrt piles and grid space
 
 ## Done
+
+- html5 dnd demo
 
 # 2021-04-03
 
