[cube]: Add toponym debug modeline thing

--- a/cube/index.html
+++ b/cube/index.html
@@ -10,6 +10,7 @@
     <section id="container">
       <section id="context"></section>
     </section>
+    <section id="debug">debug</section>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
