[cube] add hud mock-up

--- a/cube/index.html
+++ b/cube/index.html
@@ -10,7 +10,9 @@
     <section id="container">
       <section id="context"></section>
     </section>
-    <section id="debug">debug</section>
+    <section id="debug"></section>
+    <section id="health">❤️❤️❤️🖤</section>
+    <section id="stamina">💛💛🖤</section>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
